--- a/pom.xml
+++ b/pom.xml
@@ -100,8 +100,9 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-freemarker</artifactId>
-			<version>2.3.1.RELEASE</version>
+			<version>2.4.1</version>
 		</dependency>
+
 	</dependencies>
 
 	<build>
